compiler/tests/fail/typing/x86-64/conditional_op_mismatch.jazz
export fn main () {
  reg u32 x;
  reg bool b;
  x = b ? b : x;
}
